user-details address html updated.

--- a/src/main/resources/templates/user_details/_address.html
+++ b/src/main/resources/templates/user_details/_address.html
@@ -467,7 +467,7 @@
 
                                     <input type="text" id="delivery_address_neighborhood"
                                            class="checkout_input form-control"
-                                           required="required">
+                                           required="required" pattern="^[a-zA-Z ]+$">
                                 </div>
                                 <div class="col-lg-6">
                                     <!-- Zipcode -->
