Profile address modified

--- a/src/main/resources/templates/profile/_address.html
+++ b/src/main/resources/templates/profile/_address.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-</head>
-
+<br>
+<br>
 <div class="row order - row ">
     <div class="col-lg-6">
         <div class="address-element-padding">
@@ -49,6 +47,7 @@
                                 <select name="billing_address_title" id="billing_address_title"
                                         class="dropdown_item_select checkout_input"
                                         required="required">
+                                    <option value="">SELECT</option>
                                     <option th:each="address_title : ${T(com.oak.bookyourshelf.model.Address.AddressTitle).values()}"
                                             th:value="${address_title}"
                                             th:text="#{${'address_title.' + address_title}}">addressTitle
@@ -113,7 +112,7 @@
                                 <div class="col-lg-6">
                                     <!-- Neighborhood -->
                                     <div class="login-text p-b-10" style="color: black;">
-                                        Neighborhood
+                                        Town
                                     </div>
 
                                     <input type="text" id="billing_address_neighborhood"
@@ -193,7 +192,7 @@
                                     <li class="row">
                                         <div class="col-md-9 registered-address-content">
                                             <td th:text="${address.getFullAddress() + ','}"></td>
-                                            <td th:text="${address.getNeighborhood() + ','}"></td>
+                                            <td th:text="${address.getTown() + ','}"></td>
                                             <td th:text="${address.getZipCode()}"></td>
                                         </div>
                                     </li>
@@ -305,12 +304,12 @@
                                                     <!-- Neighborhood -->
                                                     <div class="login-text p-b-10"
                                                          style="color: black;">
-                                                        Neighborhood
+                                                        Town
                                                     </div>
 
                                                     <input type="text"
                                                            th:id="'billing_address_update_neighborhood' + ${address.getAddressId()}"
-                                                           th:value="${address.getNeighborhood()}"
+                                                           th:value="${address.getTown()}"
                                                            class="checkout_input form-control"
                                                            required="required" pattern="^[a-zA-Z ]+$">
                                                 </div>
@@ -364,7 +363,7 @@
                                 </div>
                             </div>
                         </div>
-                    </tr>>
+                    </tr>
                 </span>
                 <!-- No Billing  Address -->
                 <span th:if="${#lists.isEmpty(allBillingAddress)}">
@@ -419,6 +418,7 @@
                                         id="delivery_address_title"
                                         class="dropdown_item_select checkout_input"
                                         required="required">
+                                    <option value="">SELECT</option>
                                     <option th:each="address_title : ${T(com.oak.bookyourshelf.model.Address.AddressTitle).values()}"
                                             th:value="${address_title}"
                                             th:text="#{${'address_title.' + address_title}}">addressTitle
@@ -483,7 +483,7 @@
                                 <div class="col-lg-6">
                                     <!-- Neighborhood -->
                                     <div class="login-text p-b-10" style="color: black;">
-                                        Neighborhood
+                                       Town
                                     </div>
 
                                     <input type="text" id="delivery_address_neighborhood"
@@ -562,7 +562,7 @@
                                     <li class="row">
                                         <div class="col-md-9 registered-address-content">
                                             <td th:text="${address.getFullAddress() + ','}"></td>
-                                            <td th:text="${address.getNeighborhood() + ','}"></td>
+                                            <td th:text="${address.getTown() + ','}"></td>
                                             <td th:text="${address.getZipCode()}"></td>
                                         </div>
                                     </li>
@@ -675,12 +675,12 @@
                                                     <!-- Neighborhood -->
                                                     <div class="login-text p-b-10"
                                                          style="color: black;">
-                                                        Neighborhood
+                                                        Town
                                                     </div>
 
                                                      <input type="text"
                                                             th:id="'delivery_address_update_neighborhood' + ${address.getAddressId()}"
-                                                            th:value="${address.getNeighborhood()}"
+                                                            th:value="${address.getTown()}"
                                                             class="checkout_input form-control"
                                                             pattern="^[a-zA-Z ]+$" required="required">
                                                 </div>
@@ -756,7 +756,7 @@
         var surname = $('#billing_address_update_surname' + addressId).val();
         var country = $('#billing_address_update_country' + addressId).children("option:selected").val();
         var city = $('#billing_address_update_city' + addressId).children("option:selected").val();
-        var neighborhood = $('#billing_address_update_neighborhood' + addressId).val();
+        var town = $('#billing_address_update_neighborhood' + addressId).val();
         var zipCode = $('#billing_address_update_zip_code' + addressId).val();
         var fullAddress = $('#billing_address_update_open_address_2_id' + addressId).val();
         var addressTitle = $('#billing_address_update_title' + addressId).children("option:selected").val().toUpperCase().split(" ").join("_");
@@ -771,7 +771,7 @@
             surname: surname,
             country: country,
             city: city,
-            neighborhood: neighborhood,
+            town: town,
             zipCode: zipCode,
             fullAddress: fullAddress,
             addressTitle: addressTitle,
@@ -839,7 +839,7 @@
         var surname = $('#delivery_address_surname').val();
         var country = $('#delivery_address_country').val();
         var city = $('#delivery_address_city').val();
-        var neighborhood = $('#delivery_address_neighborhood').val();
+        var town = $('#delivery_address_neighborhood').val();
         var zipCode = $('#delivery_address_zip_code').val();
         var fullAddress = $('#delivery_open_address').val();
         var addressTitle = $('#delivery_address_title').val().toUpperCase().split(" ").join("_");
@@ -854,7 +854,7 @@
             surname: surname,
             country: country,
             city: city,
-            neighborhood: neighborhood,
+            town: town,
             zipCode: zipCode,
             fullAddress: fullAddress,
             addressTitle: addressTitle,
@@ -900,7 +900,7 @@
         var surname = $('#billing_address_surname').val();
         var country = $('#billing_address_country').val();
         var city = $('#billing_address_city').val();
-        var neighborhood = $('#billing_address_neighborhood').val();
+        var town = $('#billing_address_neighborhood').val();
         var zipCode = $('#billing_address_zip_code').val();
         var fullAddress = $('#billing_open_address').val();
         var addressTitle = $('#billing_address_title').val().toUpperCase().split(" ").join("_");
@@ -915,7 +915,7 @@
             surname: surname,
             country: country,
             city: city,
-            neighborhood: neighborhood,
+            town: town,
             zipCode: zipCode,
             fullAddress: fullAddress,
             phoneNumber: phoneNumber,
@@ -962,7 +962,7 @@
         var surname = $('#delivery_address_update_surname' + addressId).val();
         var country = $('#delivery_address_update_country' + addressId).children("option:selected").text();
         var city = $('#delivery_address_update_city' + addressId).children("option:selected").text();
-        var neighborhood = $('#delivery_address_update_neighborhood' + addressId).val();
+        var town = $('#delivery_address_update_neighborhood' + addressId).val();
         var zipCode = $('#delivery_address_update_zip_code' + addressId).val();
         var fullAddress = $('#delivery_address_update_open_address_id' + addressId).val();
         var addressTitle = $('#delivery_address_update_title' + addressId).children("option:selected").val().toUpperCase().split(" ").join("_");
@@ -978,7 +978,7 @@
             surname: surname,
             country: country,
             city: city,
-            neighborhood: neighborhood,
+            town: town,
             zipCode: zipCode,
             fullAddress: fullAddress,
             addressTitle: addressTitle,
@@ -1039,8 +1039,6 @@
                 })
             } else window.location.href = "/profile/#address";
         }
-
-
 
     });
     /*]]>*/
