Character set to utf-8

--- a/src/main/resources/templates/user-details.html
+++ b/src/main/resources/templates/user-details.html
@@ -3,10 +3,12 @@
 
 <head>
     <title th:text="${user.getName() + ' ' + user.getSurname() + ' Details | Book Your Shelf'}"></title>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Little Closet template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 
     <!-- Favicon -->
     <link rel="icon" th:href="@{/static/images/logo/book_your_shelf_tab.png}">
