user_details address  modified.

--- a/src/main/resources/templates/user_details/_address.html
+++ b/src/main/resources/templates/user_details/_address.html
@@ -114,7 +114,7 @@
                                     </div>
 
                                     <input type="text" id="billing_address_neighborhood"
-                                           class="checkout_input form-control"
+                                           placeholder="Town" class="checkout_input form-control"
                                            pattern="^[a-zA-Z ]+$" required="required">
                                 </div>
                                 <div class="col-lg-6">
@@ -224,7 +224,8 @@
                                                         class="dropdown_item_select checkout_input" required="required">
                                                     <option th:each="address_title : ${T(com.oak.bookyourshelf.model.Address.AddressTitle).values()}"
                                                             th:value="${address_title}"
-                                                            th:text="#{${'address_title.' + address.getAddressTitle()}}">addressTitle
+                                                            th:text="#{${'address_title.' + address_title}}"
+                                                            th:selected="${address_title == address.getAddressTitle()}">addressTitle
                                                     </option>
                                                 </select>
                                             </div>
@@ -464,7 +465,7 @@
                                     </div>
 
                                     <input type="text" id="delivery_address_neighborhood"
-                                           class="checkout_input form-control"
+                                           placeholder="Town" class="checkout_input form-control"
                                            required="required" pattern="^[a-zA-Z ]+$">
                                 </div>
                                 <div class="col-lg-6">
@@ -577,7 +578,8 @@
                                                             required="required">
                                                         <option th:each="address_title : ${T(com.oak.bookyourshelf.model.Address.AddressTitle).values()}"
                                                                 th:value="${address_title}"
-                                                                th:text="#{${'address_title.' + address.getAddressTitle()}}">addressTitle
+                                                                th:text="#{${'address_title.' + address_title}}"
+                                                                th:selected="${address_title == address.getAddressTitle()}">addressTitle
                                                         </option>
                                                     </select>
                                                 </div>
