--- a/src/main/resources/templates/admin_panel/_campaign.html
+++ b/src/main/resources/templates/admin_panel/_campaign.html
@@ -1,3 +1,5 @@
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <!-- Add campaign button -->
 <div class="address-element-padding">
     <a href="#new_campaign" class="trans_200" data-toggle="collapse">
@@ -19,7 +21,7 @@
     <div class="address-container">
         <div class="billingAddress">
             <div class="checkout_form_container">
-                <form action="#" id="new_campaign_form" class="checkout_form">
+                <form  id="new_campaign_form" class="checkout_form" th:object="${campaign}" method="post">
 
                     <!-- Name -->
                     <div>
@@ -29,7 +31,8 @@
 
                         <input type="text" id="new_campaign_name"
                                class="checkout_input form-control"
-                               placeholder="Campaign Name" required="required">
+                               placeholder="Campaign Name" required="required"
+                               pattern="[A-Za-z]+" title="Campaign name cannot have digits.">
                     </div>
 
                     <div class="row">
@@ -48,10 +51,11 @@
                             <select name="campaign_update_categories"
                                     id="new_campaign_categories" multiple="multiple"
                                     require="required">
-                                <option value="literature">Literature</option>
-                                <option value="novel">Novel</option>
-                                <option value="poet">Poet</option>
-                                <option value="comicon">Comicon</option>
+                                <option value="">SELECT</option>
+                                <option th:each="category : ${categoryService.listAll()}"
+                                        th:value="${category.getName()}"
+                                        th:text="${category.getName()}">category
+                                </option>
                             </select>
                         </div>
                     </div>
@@ -78,13 +82,15 @@
                     <div><!--ERROR--></div>
 
                     <!-- Button -->
-                    <div class="login_button trans_200"><a href="#">Add campaign</a></div>
+
+                        <input type="submit" class="login_button trans_200" value="Add Campaign"  id="new_campaign_button">
+
                 </form>
             </div>
         </div>
     </div>
 </div>
-
+<span th:unless="${#lists.isEmpty(allCampaigns)}">
 <!-- Sort orders -->
 <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
     <div class="products_dropdown product_dropdown_sorting">
@@ -137,64 +143,49 @@
     <br>
     <div class="container">
         <div class="orderDetailBox">
+            <tr th:each="campaign: ${allCampaigns}">
 
             <!-- Category -->
             <div class="address-element-padding">
-                <a href="campaign-details.html">
+                <a th:href="@{'/campaign-details/' + ${campaign.id}}">
                     <div class="category-element">
                         <div class="product_content">
                             <div class="row order - row collapsible">
                                 <div class="col-lg-3 col-md-3 col-xs-6">
-                                    <div class="profile-order-text">1</div>
+                                    <div class="profile-order-text">
+                                        <td th:text="${campaign.getId()}"></td>
+                                    </div>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-xs-6">
-                                    <div class="profile-order-text">Literature Day</div>
+                                    <div class="profile-order-text">
+                                        <td th:text="${campaign.getName()}"></td>
+                                    </div>
                                 </div>
 
                                 <div class="col-lg-3 col-md-3 col-xs-6">
-                                    <div class="profile-order-text">%10</div>
+                                    <div class="profile-order-text">%
+                                        <td th:text="${campaign.getRate()}"></td>
+                                    </div>
                                 </div>
 
                                 <div class="col-lg-3 col-md-3 col-xs-6">
-                                    <div class="profile-order-text">Literature</div>
+                                    <div class="profile-order-text">
+                                        <td th:text="${campaign.getId()}"></td>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
-
-            <!-- Category -->
-            <div class="address-element-padding">
-                <a href="campaign-details.html">
-                    <div class="category-element">
-                        <div class="product_content">
-                            <div class="row order - row collapsible">
-                                <div class="col-lg-3 col-md-3 col-xs-6">
-                                    <div class="profile-order-text">2</div>
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-xs-6">
-                                    <div class="profile-order-text">Crazy Friday</div>
-                                </div>
-
-                                <div class="col-lg-3 col-md-3 col-xs-6">
-                                    <div class="profile-order-text">%20</div>
-                                </div>
-
-                                <div class="col-lg-3 col-md-3 col-xs-6">
-                                    <div class="profile-order-text">All</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
+            </tr>
         </div>
     </div>
 </div>
 
-<!-- No categories -->
-<div class="warning-text" style="display: none">There are no categories.</div>
+
+
+
 
 <div class="row page_nav_row">
     <div class="col">
@@ -208,3 +199,52 @@
         </div>
     </div>
 </div>
+</span>
+    <!-- No categories -->
+<span th:if="${#lists.isEmpty(allCampaigns)}">
+    <div class="warning-text">There are no campaigns.</div>
+</span>
+<script>
+
+    $('#new_campaign_button').click(function (event) {
+        var ret = {
+
+            rate: $('#new_campaign_rate').val(),
+            name: $('#new_campaign_name').val(),
+            startDate: $('#campaign_start_date').val(),
+            endDate: $('#campaign_end_date').val(),
+            categories: $('#new_campaign_categories option:selected').val()
+
+        };
+
+        if (validation_check(["new_campaign_rate", "new_campaign_name", "campaign_start_date", "campaign_end_date",
+           ])) {
+            event.preventDefault();
+            $.post("/admin-panel/campaign", ret, function (data) {
+                iziToast.show({
+                    title: 'Success',
+                    message: 'Campaign added successfully.',
+                    position: 'topRight',
+                    color: 'green'
+                });
+                window.location.href = "/admin-panel#campaign";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+
+            }).fail(function (data) {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+            })
+        }
+    });
+</script>
+
+<script th:src="@{/static/js/login.js}"></script>
+<script th:src="@{/static/js/input-mask.js}"></script>
+
+</html>
